--- a/index.html
+++ b/index.html
@@ -40,44 +40,74 @@
     </div>
 </header>
 <!-- 头部 end -->
+<div class="img-box bg-blue">
+    <div class="layout">
+    <!--焦点图-->
+    <div class="hotPic cf pr">
+        <div class="swiper-container">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><a href="#"><img src="images/banner1.png"/></a></div>
+                <div class="swiper-slide"><a href="#"><img src="images/banner1.png"/></a></div>
+                <div class="swiper-slide"><a href="#"><img src="images/banner1.png"/></a></div>
+                <div class="swiper-slide"><a href="#"><img src="images/banner1.png"/></a></div>
+            </div>
+        </div>
+        <div class="pagination tc"></div>
+    </div>
+    </div>
+</div>
 <!--banner start-->
-<div class="banner ">
+<div class="login-box">
     <div class="layout bg-white">
         <!--登陆-->
         <div class="login fr tc">
-            <div class="t fs20 lh tl"><a class="fs16 fr pt4 typo-green">马上注册</a>用户登陆</div>
-            <div class="loginInp mt30 tl"><i class="iconfont fs15 mr10 typo-84gray">&#xe617;</i><input type="text" placeholder="请输入用户名"
-                                                                         id="username"/></div>
-            <div class="loginInp mt10 tl"><i class="iconfont fs15 mr10 typo-84gray">&#xe629;</i><input type="text" placeholder="请输入密码" id="password"/>
+            <div class="t fs20 lh tl"><div class="fs12 fr pt5 typo-green"><a class="typo-green">马上注册</a> | <a class="typo-green">忘记密码</a></div>用户登陆</div>
+            <div class="loginInp mt20 tl"><i class="iconfont fs15 mr10 typo-84gray">&#xe617;</i><input type="text" placeholder="请输入用户名"
+                    id="username"/></div>
+            <div class="loginInp mt15 tl"><i class="iconfont fs15 mr10 typo-84gray">&#xe629;</i><input type="text" placeholder="请输入密码" id="password"/>
             </div>
             <div class="subBtn fs14 typo-white">立即登录</div>
-            <p class="fast lh fs14 pt40 typo-84gray">忘记密码 | 下载游戏大厅</p>
+            <div class="clearfix mt20"><img class="fl" src="images/download.png" /><img class="fr" src="images/qq.png" /></div>
         </div>
-        <!--焦点图-->
-        <div class="hotPic cf pr">
-            <div class="swiper-container">
-                <div class="swiper-wrapper">
-                    <div class="swiper-slide"><a href="#"><img src="images/banner1.png"/></a></div>
-                    <div class="swiper-slide"><a href="#"><img src="images/banner1.png"/></a></div>
-                    <div class="swiper-slide"><a href="#"><img src="images/banner1.png"/></a></div>
-                </div>
+        <!--最新公告-->
+        <div class="news">
+            <div class="pt40"><a class="news-more fr typo-yellow-ff8413 lh pb3 mr40 fs14 mt20">更多公告 >></a><h2 class="fs26 typo-18gray fn lh">最新公告</h2><strong class="block fs16 typo-84gray fn lh mt5">实时公布最新游戏中心新闻，让你一手掌握。</strong></div>
+            <div class="news-list fl lh8">
+                <h3 class="typo-18gray fn">1、粉丝福利购,淘宝粉丝福利购优惠券直播第一站!</h3>
+                <p class="typo-84gray">汇集分享最新最全的天猫/淘宝粉丝福利购淘口令,淘宝内部优惠券,天猫内部优惠券。领取淘宝粉丝福利购优惠券,到粉丝福利...</p>
+                <strong class="fn typo-84gray">2016-11-27</strong>
             </div>
-            <div class="pagination tc"></div>
+            <div class="news-list fr lh8">
+                <h3 class="typo-18gray fn">2、粉丝福利购,淘宝粉丝福利购优惠券直播第一站!</h3>
+                <p class="typo-84gray">汇集分享最新最全的天猫/淘宝粉丝福利购淘口令,淘宝内部优惠券,天猫内部优惠券。领取淘宝粉丝福利购优惠券,到粉丝福利...</p>
+                <strong class="fn typo-84gray">2016-11-27</strong>
+            </div>
+            <div class="news-list fl lh8">
+                <h3 class="typo-18gray fn">3、粉丝福利购,淘宝粉丝福利购优惠券直播第一站!</h3>
+                <p class="typo-84gray">汇集分享最新最全的天猫/淘宝粉丝福利购淘口令,淘宝内部优惠券,天猫内部优惠券。领取淘宝粉丝福利购优惠券,到粉丝福利...</p>
+                <strong class="fn typo-84gray">2016-11-27</strong>
+            </div>
+            <div class="news-list fr lh8">
+                <h3 class="typo-18gray fn">4、粉丝福利购,淘宝粉丝福利购优惠券直播第一站!</h3>
+                <p class="typo-84gray">汇集分享最新最全的天猫/淘宝粉丝福利购淘口令,淘宝内部优惠券,天猫内部优惠券。领取淘宝粉丝福利购优惠券,到粉丝福利...</p>
+                <strong class="fn typo-84gray">2016-11-27</strong>
+            </div>
         </div>
     </div>
 </div>
+<div class="clearfix"></div>
 <!--banner end -->
 <!-- 广告 start -->
-<div class="adCon">
-    <div class="layout">
-        <ul class="adCon-list clearfix mt50">
-            <li class="ml20 mr20 fl"><a href="#"><img class="fl" src="images/ad_1.png" width="275" height="140" alt="游戏下载"/></a></li>
-            <li class="ml20 mr20 fl"><a href="#"><img class="fl" src="images/ad_1.png" width="275" height="140" alt="游戏下载"/></a></li>
-            <li class="ml20 mr20 fl"><a href="#"><img class="fl" src="images/ad_1.png" width="275" height="140" alt="游戏下载"/></a></li>
-            <li class="ml20 mr20 fl"><a href="#"><img class="fl" src="images/ad_1.png" width="275" height="140" alt="游戏下载"/></a></li>
-        </ul>
-    </div>
-</div>
+<!--<div class="adCon">-->
+    <!--<div class="layout">-->
+        <!--<ul class="adCon-list clearfix mt50">-->
+            <!--<li class="ml20 mr20 fl"><a href="#"><img class="fl" src="images/ad_1.png" width="275" height="140" alt="游戏下载"/></a></li>-->
+            <!--<li class="ml20 mr20 fl"><a href="#"><img class="fl" src="images/ad_1.png" width="275" height="140" alt="游戏下载"/></a></li>-->
+            <!--<li class="ml20 mr20 fl"><a href="#"><img class="fl" src="images/ad_1.png" width="275" height="140" alt="游戏下载"/></a></li>-->
+            <!--<li class="ml20 mr20 fl"><a href="#"><img class="fl" src="images/ad_1.png" width="275" height="140" alt="游戏下载"/></a></li>-->
+        <!--</ul>-->
+    <!--</div>-->
+<!--</div>-->
 <!-- 广告 end -->
 <!-- 游戏推荐 start -->
 <div class="gameCon mt50">
