--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
     <div class="layout">
     <!--焦点图-->
     <div class="hotPic cf pr">
+        <a class="arrow-left" href="#"></a>
+        <a class="arrow-right" href="#"></a>
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide"><a href="#"><img src="images/banner1.png"/></a></div>
